Fix CORS for Vercel deployments